data/derived/sp14/progs/unify/prog0348.ml.out
Characters 34-37:
  let _ = eval (Average(VarX,VarY), 0.5, 0.5);;
                                    ^^^
Error: This expression has type float but an expression was expected of type
         int
